# exploring-paths-llm

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
RL2/datasets/: base.py  rl.py
RL2/trainer/: ppo.py  spo.py  spo_0p5.py
RL2/trainer/config/: ppo.yaml  spo.yaml
RL2/utils/: algorithms.py  functions.py
RL2/workers/: actor.py  critic.py
RL2/workers/fsdp/: actor.py
envs/: gsm8k.py
examples/: gsm8k_0.sh  gsm8k_0_1.sh  gsm8k_0p5_0.sh  gsm8k_0p5_0_1.sh  gsm8k_0p5_test.sh  gsm8k_reinforce.sh
