[project]
name = "exploring-paths-llm"
version = "1.0.0"
description = "Exploring Paths in Probabilistic Graphs for Model Training - Research Implementation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Junsoo Byun (변준수)"}
]
license = {text = "MIT"}
keywords = ["reinforcement-learning", "large-language-models", "training", "gsm8k", "probabilistic-graphs"]

dependencies = [
    "torch==2.8.0",
    "flash-attn==2.8.3",
    "hydra-core>=1.3.2",
    "ninja>=1.13.0",
    "ring-flash-attn==0.1.8",
    "tqdm>=4.67.1",
    "transformers==4.56.1",
    "peft>=0.17.1",
    "liger-kernel>=0.6.2",
    "sglang[all]==0.5.2",
    "wandb>=0.22.0",
    "torchdata>=0.11.0",
    "omegaconf>=2.3.0",
    "nvidia-ml-py>=13.580.82",
    "math-verify>=0.8.0",
    "planetarium",
    "weave>=0.52.10",
    "rl-square>=0.0.2",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{requirement = "torch", match-runtime = true}]

[tool.uv.sources]
planetarium = { git = "https://github.com/BatsResearch/planetarium.git" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["RL2*"]

[project.urls]
Repository = "https://github.com/yourusername/exploring-paths-llm"
"Original RL2 Library" = "https://github.com/ChenmienTan/RL2"
